package arms

import (
	"time"

	"github.com/wowsims/tbc/sim/core"
	"github.com/wowsims/tbc/sim/core/proto"
	"github.com/wowsims/tbc/sim/core/stats"
	"github.com/wowsims/tbc/sim/warrior"
)

func (war *ArmsWarrior) registerMastery() {
	procAttackConfig := core.SpellConfig{
		ActionID:    core.ActionID{SpellID: StrikesOfOpportunityHitID},
		SpellSchool: core.SpellSchoolPhysical,
		ProcMask:    core.ProcMaskMeleeSpecial,
		Flags:       core.SpellFlagMeleeMetrics | core.SpellFlagNoOnCastComplete | core.SpellFlagPassiveSpell,

		DamageMultiplier: 0.55,
		CritMultiplier:   war.DefaultCritMultiplier(),
		ThreatMultiplier: 1,

		ApplyEffects: func(sim *core.Simulation, target *core.Unit, spell *core.Spell) {
			baseDamage := spell.Unit.MHNormalizedWeaponDamage(sim, spell.MeleeAttackPower())
			spell.CalcAndDealDamage(sim, target, baseDamage, spell.OutcomeMeleeSpecialHitAndCrit)
		},
	}

	procAttack := war.RegisterSpell(procAttackConfig)

	war.MakeProcTriggerAura(core.ProcTrigger{
		Name:               "Strikes of Opportunity",
		ActionID:           procAttackConfig.ActionID,
		Callback:           core.CallbackOnSpellHitDealt,
		Outcome:            core.OutcomeLanded,
		ProcMask:           core.ProcMaskMelee,
		ICD:                100 * time.Millisecond,
		TriggerImmediately: true,

		ExtraCondition: func(sim *core.Simulation, spell *core.Spell, result *core.SpellResult) bool {
			// Implement the proc in here so we can get the most up to date proc chance from mastery
			return sim.Proc(war.GetMasteryProcChance(), "Strikes of Opportunity")
		},

		Handler: func(sim *core.Simulation, spell *core.Spell, result *core.SpellResult) {
			procAttack.Cast(sim, result.Target)
		},
	})
}

func (war *ArmsWarrior) registerSeasonedSoldier() {
	actionID := core.ActionID{SpellID: 12712}

	hasValidWeaponType := func() bool {
		weapon := war.GetMHWeapon()
		if weapon == nil || weapon.HandType != proto.HandType_HandTypeTwoHand {
			return false
		}

		switch weapon.WeaponType {
		case proto.WeaponType_WeaponTypeAxe,
			proto.WeaponType_WeaponTypeMace,
			proto.WeaponType_WeaponTypeSword,
			proto.WeaponType_WeaponTypePolearm:
			return true
		}
		return false
	}

	aura := war.RegisterAura(core.Aura{
		Label:    "Seasoned Soldier",
		ActionID: actionID,
		Duration: core.NeverExpires,
	}).AttachMultiplicativePseudoStatBuff(
		&war.PseudoStats.SchoolDamageDealtMultiplier[stats.SchoolIndexPhysical], 1.25,
	).AttachSpellMod(core.SpellModConfig{
		ClassMask: warrior.SpellMaskThunderClap | warrior.SpellMaskWhirlwind,
		Kind:      core.SpellMod_PowerCost_Flat,
		IntValue:  -10,
	})

	if hasValidWeaponType() {
		core.MakePermanent(aura)
	}

	war.RegisterItemSwapCallback([]proto.ItemSlot{proto.ItemSlot_ItemSlotMainHand},
		func(sim *core.Simulation, _ proto.ItemSlot) {
			if hasValidWeaponType() {
				aura.Activate(sim)
			} else {
				aura.Deactivate(sim)
			}
		})

}

func (war *ArmsWarrior) registerSuddenDeath() {
	suddenDeathAura := war.RegisterAura(core.Aura{
		Label:    "Sudden Death",
		ActionID: core.ActionID{SpellID: 52437},
		Duration: 2 * time.Second,
		OnGain: func(aura *core.Aura, sim *core.Simulation) {
			war.ColossusSmash.CD.Reset()
		},
	})

	war.MakeProcTriggerAura(core.ProcTrigger{
		Name:               "Sudden Death - Trigger",
		ActionID:           core.ActionID{SpellID: 29725},
		ProcMask:           core.ProcMaskMelee,
		Outcome:            core.OutcomeLanded,
		Callback:           core.CallbackOnSpellHitDealt,
		TriggerImmediately: true,

		Handler: func(sim *core.Simulation, spell *core.Spell, result *core.SpellResult) {
			if !spell.ProcMask.Matches(core.ProcMaskMeleeWhiteHit) && spell.ActionID.SpellID != StrikesOfOpportunityHitID {
				return
			}

			if sim.Proc(0.1, "Sudden Death") {
				suddenDeathAura.Activate(sim)
			}
		},
	})

	executeAura := core.BlockPrepull(war.RegisterAura(core.Aura{
		Label:    "Sudden Execute",
		ActionID: core.ActionID{SpellID: 139958},
		Duration: 10 * time.Second,
	})).AttachSpellMod(core.SpellModConfig{
		ClassMask:  warrior.SpellMaskOverpower,
		Kind:       core.SpellMod_PowerCost_Pct,
		FloatValue: -2,
	})

	war.MakeProcTriggerAura(core.ProcTrigger{
		Name:           "Sudden Execute - Trigger",
		ClassSpellMask: warrior.SpellMaskExecute,
		Outcome:        core.OutcomeLanded,
		Callback:       core.CallbackOnSpellHitDealt,
		Handler: func(sim *core.Simulation, spell *core.Spell, result *core.SpellResult) {
			executeAura.Activate(sim)
		},
	})
}

func (war *ArmsWarrior) registerTasteForBlood() {
	actionID := core.ActionID{SpellID: 60503}

	war.TasteForBloodAura = core.BlockPrepull(war.RegisterAura(core.Aura{
		Label:     "Taste For Blood",
		ActionID:  actionID,
		Duration:  12 * time.Second,
		MaxStacks: 5,
	}))

	war.MakeProcTriggerAura(core.ProcTrigger{
		Name:           "Taste For Blood: Mortal Strike - Trigger",
		ClassSpellMask: warrior.SpellMaskMortalStrike,
		Outcome:        core.OutcomeLanded,
		Callback:       core.CallbackOnSpellHitDealt,
		Handler: func(sim *core.Simulation, spell *core.Spell, result *core.SpellResult) {
			war.TasteForBloodAura.Activate(sim)
			war.TasteForBloodAura.SetStacks(sim, war.TasteForBloodAura.GetStacks()+2)
		},
	})

	war.MakeProcTriggerAura(core.ProcTrigger{
		Name:     "Taste For Blood: Dodge - Trigger",
		Callback: core.CallbackOnSpellHitDealt,
		Outcome:  core.OutcomeDodge,
		Handler: func(sim *core.Simulation, spell *core.Spell, result *core.SpellResult) {
			war.TasteForBloodAura.Activate(sim)
			war.TasteForBloodAura.AddStack(sim)
		},
	})
}
